@@ -36,6 +36,7 @@ public:
 	unsigned int NumFiles() const override { return (searchFiles.size()); }
 	bool GetFile(unsigned int fid, std::vector<std::uint8_t>& buffer) override;
 	void FileInfo(unsigned int fid, std::string& name, int& size) const override;
+	const std::string& GetOrigFileName(unsigned int fid) const { return searchFiles[fid]; }
 
 private:
 	/// "ExampleArchive.sdd/"
